k8s/41-reservationservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservationservice-api
  namespace: ev-platform-dev
spec:
  type: ClusterIP
  selector:
    app: reservationservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
